--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 go:
-  - "1.11"
+  - "1.13"
 
 os:
   - linux
@@ -12,4 +12,4 @@ install: true
 
 script:
   - env GO111MODULE=on go build
-  - env GO111MODULE=on go test
+  - env GO111MODULE=on go test -v -race
