--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ sudo: false
 install: true
 
 script:
-  - env GO111MODULE=on go build
-  - env GO111MODULE=on go test -v -race
+  - make
+  - make ci
